# freeswitch-router

./: CMakeLists.txt  DEPLOYMENT.md  Makefile  Makefile.backup  Makefile.bak  Makefile.freeswitch  Makefile.safe  Makefile.simple  README.md  dialplan_test.sh  fix_patch  generate_dynamic_dialplan.sh  monitor_module2.sh  monitor_providers.sh  provider_route_enhanced.c  quick-fix  route_handler_corrected.lua  router  router.backup.20250814_170040  run  setup_db.sh  setup_postgres.sh  setup_postgresql.sh  setup_validation.sh  start_module2.sh  t  test_module2.sh  test_module2_complete.sh  test_sip.py
configs/: config.json  freeswitch_s2.json  production.json
configs/dialplan/: router.xml
configs/freeswitch/: fs2_dialplan.xml  fs2_sip_profile.xml
configs/freeswitch/gateways/: fs1.xml  fs3.xml  fs4.xml
examples/: routing_demo.sh  usage.sh
include/api/: handlers.h
include/cli/: cli.h  cli_commands.h
include/commands/: calls_cmd.h  did_cmd.h  module2_cmd.h  monitor_cmd.h  provider_cmd.h  route_cmd.h  sip_cmd.h  stats_cmd.h  validation_cmd.h
include/core/: cli.h  common.h  config.h  logging.h  models.h  server.h
include/db/: cache.h  database.h
include/freeswitch/: fs_xml_generator.h
include/router/: load_balancer.h  router.h
include/sip/: esl_handler.h  freeswitch_handler.h  sip_server.h
include/utils/: logger.h
include/validation/: call_validator.h  state_sync_service.h
scripts/: freeswitch-router.service  route_handler_validated  route_handler_with_validation.lua  router.lua  schema.sh  schema.sql  schema_enhanced.sql  schema_module2.sql  schema_pg.sql  schema_validate.sql  schema_validation.sql  setup_freeswitch_router.sh
src/: CMakeLists.txt  main.c  main.c.bak  main_module2_update.c
src/api/: handlers.c  route_handler.c
src/cli/: cli.c  cli_commands.c
src/commands/: calls_cmd.c  did_cmd.c  module2_cmd.c  monitor_cmd.c  monitor_cmd.c.bak2  monitor_fix.c  provider_cmd.c  provider_cmd.c.bak  provider_mgmt.c  route_cmd.c  route_cmd.c.backup  route_cmd.c.bak  sip_cmd.c  stats_cmd.c  validation_cmd.c
src/core/: config.c  models.c  server.c  utils.c
src/db/: cache.c  database.c.backup  database_pg.c
src/freeswitch/: freeswitch_integration.c  freeswitch_integration.h  fs_generate_module2_dialplan.c  fs_router_api.c  fs_xml_generator.c  fs_xml_generator.c.backup
src/router/: load_balancer.c  router.c  router.c.orig  router.c.rej
src/sip/: freeswitch_handler.c  sip_server.c.backup  sip_server_dynamic.c  sip_server_global.c
src/tests_disabled/: test_router.c
src/utils/: logger.c
src/validation/: call_validator.c  state_sync_service.c
